ctowasm/test/samples/error/enum_redeclaration.c
enum x {a};
enum x {b};

int main() {
enum x {a};
enum x {b};
}